# lib/db/src/schema/index.ts
@@ -1,6 +1,9 @@
 export * from "./users";
 export * from "./visas";
 export * from "./visaConsents";
+export * from "./visaEligibilityRules";
+export * from "./companySettings";
+export * from "./branches";
 export * from "./visaApplications";
 export * from "./packages";
 export * from "./packageBookings";
